fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,18 @@
 /* Generics */
+::-webkit-scrollbar {
+    width: 5px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgb(99, 99, 99);
+    border-radius: 10px;
+}
+
 body {
     font-family: 'Questrial', sans-serif;
     height: calc(100vh - 20px);
-    background: linear-gradient(0deg, rgb(228, 226, 222) 88%, rgb(0,150,136) 88%);
+    background: linear-gradient(0deg, rgb(228, 226, 222) 88%, rgb(0, 150, 136) 88%);
 }
 
 .render-app {
@@ -30,11 +40,11 @@ a:hover {
 }
 
 .active {
-    background-color: rgb(233,235,235);
+    background-color: rgb(233, 235, 235);
 }
 
 .cs-border-right {
-    border-right: 1px solid rgb(0,150,136);
+    border-right: 1px solid rgb(0, 150, 136);
 }
 
 /* User */
@@ -45,18 +55,18 @@ a:hover {
 
 #user i, header i {
     font-size: 24px;
-    color: rgb(177,177,177);
+    color: rgb(177, 177, 177);
     padding: 0 10px;
     cursor: pointer;
 }
 
 /* Notifications */
 #notifications {
-    background-color: rgb(142,218,252);
+    background-color: rgb(142, 218, 252);
     padding: 15px 10px;
 }
 
-#notifications > div {
+#notifications>div {
     padding-left: 10px;
 }
 
@@ -66,30 +76,31 @@ a:hover {
     font-size: 22px;
     padding: 15px 12px;
     border-radius: 50%;
-    color: rgb(142,218,252);
+    color: rgb(142, 218, 252);
 }
 
 /* search */
 #search {
-    background-color: rgb(250,250,250);
+    background-color: rgb(250, 250, 250);
     padding: 10px;
 }
 
-#search input, 
+#search input,
 #write-message input {
     font-size: 14px;
 }
 
 .fa-search {
-    color: rgb(177,177,177);
+    color: rgb(177, 177, 177);
 }
 
 .border-custom {
-    border-color: rgb(206,212,218);
+    border-color: rgb(206, 212, 218);
 }
 
 /* Contacts */
 #contacts, #show-chat {
+    height: 50vh;
     overflow-y: scroll;
 }
 
@@ -105,7 +116,7 @@ header {
 }
 
 header span {
-    color: rgb(167,152,140);
+    color: rgb(167, 152, 140);
     font-size: 14px;
 }
 
@@ -118,7 +129,7 @@ header span {
 #show-chat span {
     float: right;
     font-size: 10px;
-    color: rgb(191,196,210);
+    color: rgb(191, 196, 210);
 }
 
 #show-chat p {
@@ -126,7 +137,7 @@ header span {
 }
 
 #messages-sent .sent {
-    background-color: rgb(213,249,186);
+    background-color: rgb(213, 249, 186);
     padding: 15px;
     border-radius: 10px;
 }
@@ -138,17 +149,17 @@ header span {
     margin-top: 150px;
 }
 
-.message.sent + .message.sent {
+.message.sent+.message.sent {
     margin-top: 20px;
 }
 
-.message.received + .message.received {
+.message.received+.message.received {
     margin-top: 20px;
 }
 
 /* footer */
 footer {
-    background-color: rgb(233,235,235);
+    background-color: rgb(233, 235, 235);
     padding: 10px;
 }
 
@@ -157,7 +168,7 @@ footer {
 }
 
 footer i {
-    color:rgb(107,115,118);
+    color: rgb(107, 115, 118);
     font-size: 24px;
     padding: 0 10px;
     cursor: pointer;
